Goncho is a god

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ logging.level.org.hibernate.type=TRACE
 springdoc.api-docs.path=/easystory-api-docs
 springdoc.swagger-ui.path=/easystory-api-docs-ui.html
 
+# JWT Secret
+jwt.secret = thebackendsecuritysecretmustbeplacedhere
+
 # Documentation: http://localhost:8080/easystory-api-docs-ui.html
